<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="@string/key_file_system"
        app:title="@string/file_system">
        <com.none.tom.exiferaser.settings.ImageButtonPreference
            app:icon="@drawable/ic_folder"
            app:key="@string/key_default_path_open"
            app:title="@string/default_path_open" />

        <com.none.tom.exiferaser.settings.ImageButtonPreference
            app:icon="@drawable/ic_save_alt"
            app:key="@string/key_default_path_save"
            app:title="@string/default_path_save" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/image">
        <SwitchPreference
            app:icon="@drawable/ic_preserve_image_orientation"
            app:key="@string/key_image_orientation"
            app:summaryOff="@string/preserve_image_orientation_off"
            app:summaryOn="@string/preserve_image_orientation_on"
            app:title="@string/image_orientation" />

        <SwitchPreference
            app:icon="@drawable/ic_share_image_by_default"
            app:key="@string/key_image_share_by_default"
            app:summaryOff="@string/share_images_by_default_off"
            app:summaryOn="@string/share_images_by_default_on"
            app:title="@string/image_share_by_default" />

        <EditTextPreference
            app:dialogLayout="@layout/preference_text_input_layout"
            app:dialogTitle="@string/default_display_name_suffix"
            app:icon="@drawable/ic_title"
            app:key="@string/key_default_display_name_suffix"
            app:title="@string/default_display_name_suffix" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ui">
        <com.none.tom.exiferaser.settings.NightModeListPreference
            app:icon="@drawable/ic_theme_night"
            app:key="@string/key_night_mode"
            app:title="@string/night_mode" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/miscellaneous">
        <Preference
            app:icon="@drawable/ic_extension"
            app:key="@string/key_image_supported_formats"
            app:title="@string/image_supported_formats" />

        <Preference
            app:icon="@drawable/ic_translate"
            app:key="@string/key_translate"
            app:summary="@string/onesky"
            app:title="@string/become_translator" />

        <Preference
            app:icon="@drawable/ic_bug_report"
            app:key="@string/key_bug_report"
            app:summary="@string/github"
            app:title="@string/report_bug" />

        <Preference
            app:icon="@drawable/ic_info"
            app:key="@string/key_version"
            app:title="@string/version" />
    </PreferenceCategory>
</PreferenceScreen>
