<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:gravity="center_vertical"
        android:text="@string/path_save_choose"
        android:textAppearance="?attr/textAppearanceTitleLarge" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/path_save_default"
        style="@style/Widget.Material3Expressive.Button.TonalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:text="@string/path_save_default" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/path_save_custom"
        style="@style/Widget.Material3Expressive.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/path_save_custom" />
</LinearLayout>
