<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_main">

    <action
        android:id="@+id/global_to_main"
        app:destination="@id/fragment_main"
        app:popUpTo="@id/fragment_main"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/fragment_main"
        android:name="com.none.tom.exiferaser.main.ui.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">

        <argument
            android:name="shortcut"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="image_selection"
            android:defaultValue="@null"
            app:argType="android.net.Uri"
            app:nullable="true" />

        <argument
            android:name="images_selection"
            android:defaultValue="@null"
            app:argType="android.net.Uri[]"
            app:nullable="true" />

        <action
            android:id="@+id/main_to_delete_camera_images"
            app:destination="@id/fragment_delete_camera_images" />

        <action
            android:id="@+id/main_to_settings"
            app:destination="@id/fragment_settings" />

        <action
            android:id="@+id/main_to_help"
            app:destination="@id/fragment_help" />

        <action
            android:id="@+id/main_to_selection_save_path"
            app:destination="@id/fragment_save_path" />

        <action
            android:id="@+id/main_to_selection"
            app:destination="@id/fragment_selection" />
    </fragment>

    <dialog
        android:id="@+id/fragment_delete_camera_images"
        android:name="com.none.tom.exiferaser.main.ui.DeleteCameraImagesFragment"
        tools:layout="@layout/fragment_delete_camera_images" />

    <dialog
        android:id="@+id/fragment_save_path"
        android:name="com.none.tom.exiferaser.savepath.ui.SavePathFragment"
        tools:layout="@layout/fragment_save_path">

        <action
            android:id="@+id/selection_save_path_to_selection"
            app:destination="@id/fragment_selection" />
    </dialog>

    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.none.tom.exiferaser.settings.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/settings_to_default_display_name_suffix"
            app:destination="@id/fragment_default_display_name_suffix" />

        <action
            android:id="@+id/settings_to_default_night_mode"
            app:destination="@id/fragment_default_night_mode" />
    </fragment>

    <dialog
        android:id="@+id/fragment_default_display_name_suffix"
        android:name="com.none.tom.exiferaser.settings.ui.DefaultDisplayNameSuffixFragment"
        tools:layout="@layout/fragment_default_display_name_suffix">

        <argument
            android:name="default_display_name_suffix"
            app:argType="string" />
    </dialog>

    <dialog
        android:id="@+id/fragment_default_night_mode"
        android:name="com.none.tom.exiferaser.settings.ui.DefaultNightModeFragment">

        <argument
            android:name="default_night_mode"
            app:argType="integer" />
    </dialog>

    <fragment
        android:id="@+id/fragment_help"
        android:name="com.none.tom.exiferaser.main.ui.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/fragment_selection"
        android:name="com.none.tom.exiferaser.selection.ui.SelectionFragment"
        android:label="@string/summary"
        tools:layout="@layout/fragment_selection">

        <argument
            android:name="save_path"
            app:argType="android.net.Uri"
            app:nullable="false" />
    </fragment>
</navigation>
